# bria-client

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  SECURITY.md  TODOs  pyproject.toml
.claude/: CLAUDE.MD
.claude/rules/: code-style.md  testing.md
.github/workflows/: ci.yml  jira-sync.yml  pr-title.yml  publish.yml  release-please.yml  release.yml  tests.yml  workflow.yml
examples/: async_endpoint.py  async_example.py  async_with_async_endpoint.py  async_with_multi_process.py  batch_async_example.py  blur_background.py  custom_client.py  custom_engine_example.py  dag_example.py  enhance_image.py  error_handling.py  failed_request.py  multi_process_async.py  multi_thread_async.py  polling_endpoint.py  simple_custom_engine.py  simple_endpoint_async.py  simple_endpoint_sync.py  simple_example.py  success_request.py  sync_endpoint.py  use_by_env.py
examples/old_examples/: async_example.py  batch_async_example.py  blur_background.py  custom_engine_example.py  enhance_image.py  error_handling.py
scripts/: run_tests.sh  show_releases.sh
src/: bria_sdk.py  settings.py
src/bria_client/: __init__.py  _version.py  constants.py  engine_client.py  settings.py
src/bria_client/apis/: __init__.py  api.py  bria_backend.py  status.py  status_based_api.py
src/bria_client/apis/image/: __init__.py  generation.py
src/bria_client/apis/image_editing/: __init__.py  api.py  background_editing.py  edit.py  foreground_editing.py  mask_based_editing.py  product_integrate.py  size_editing.py
src/bria_client/apis/prompts/: structure.py
src/bria_client/apis/status/: __init__.py  status.py  status_based_api.py
src/bria_client/apis/v1/: v1_api.py
src/bria_client/apis/v2/: __init__.py  status_api.py  v2_api.py
src/bria_client/apis/video/: __init__.py  video_editing.py  video_generation.py  video_segmentation.py
src/bria_client/clients/: __init__.py  async_client.py  base_client.py  bria_client.py  bria_clients.py  bria_response.py  engine_client.py  http_client.py  internal_request_client.py  sync_client.py
src/bria_client/clients/internal/: __init__.py  internal_request_client.py
src/bria_client/decorators/: __init__.py  enable_sync_decorator.py  temp_api_token.py  wait_for_status_decorator.py
src/bria_client/engines/: __init__.py  api_engine.py  async_http_request.py  bria_engine.py
src/bria_client/engines/base/: __init__.py  api_engine.py  async_http_request.py  base_http_request.py  sync_http_request.py
src/bria_client/engines/internal/: __init__.py  internal_request_engine.py
src/bria_client/exceptions/: __init__.py  bria_exception.py  status_exception.py  unauthorized_exceptions.py
src/bria_client/exceptions/old/: polling_exception.py  unkown_status_exception.py
src/bria_client/internal/: internal_request_client.py
src/bria_client/payloads/: __init__.py  bria_payload.py  image_editing_payload.py  image_generation_payload.py  structured_prompt_generation_payload.py  video_editing_payload.py  video_segmenting_payload.py
src/bria_client/responses/: __init__.py  bria_response.py  image_editing_responses.py  status_response.py  video_editing.py  video_segmenting.py
src/bria_client/results/: __init__.py  bria_response.py  image_editing.py  image_generation.py  status.py  structured_prompt_generation.py  video_editing.py  video_segmenting.py
src/bria_client/schemas/: __init__.py  base_models.py  status_api.py
src/bria_client/schemas/image/: generation.py
src/bria_client/schemas/image_editing_apis/: __init__.py  background_editing.py  edit.py  foreground_editing.py  mask_based_editing.py  product_integrate.py  size_editing.py
src/bria_client/schemas/prompts/: sturcture.py
src/bria_client/schemas/video_apis/: __init__.py  video.py  video_editing.py  video_generation.py  video_segmentation.py
src/bria_client/toolkit/: __init__.py  custom_errors.py  image.py  image_source.py  models.py  response.py  specifics.py  status.py  video.py
src/bria_client/toolkit/errors/: __init__.py  custom_errors.py
src/bria_engine_api/: engine_client.py
src/bria_engine_api/apis/: __init__.py  status.py  status_based_api.py
src/bria_engine_api/apis/image_editing/: __init__.py  background_editing.py  canvas_editing.py  foreground_editing.py  mask_based_editing.py  size_editing.py  sizing_editing.py
src/bria_engine_api/apis/status/: status.py
src/bria_engine_api/decorators/: wait_for_status_decorator.py
src/bria_engine_api/schemas/: status_api.py
src/bria_internal/: __init__.py
src/bria_internal/common/: env_config.py  settings.py  singleton_meta.py
src/bria_internal/common/bria_engine_api/: __init__.py  (+5 more)
src/bria_internal/exceptions/: content_moderation.py  content_moderation_exception.py  engine_api_exception.py  polling_exception.py
src/bria_internal/firebase/: __init__.py  client.py  constants.py  enums.py  models.py
src/bria_internal/redis/: __init__.py  base_client.py  base_client_tests.py
src/bria_internal/schemas/: status_api.py
src/bria_internal/ses/: __init__.py  client.py
src/bria_internal/slack/: __init__.py  client.py
src/bria_sdk/: __init__.py  bria_sdk.py  settings.py
src/bria_sdk/engine_api/: constants.py  engine_client.py
tests/: conftest.py  status_api_test.py  status_api_tests.py
tests/component/: test_client.py
tests/concurrency/clients/: test_race_condition_reproduction_async.py  test_race_condition_reproduction_sync.py
tests/integration/: test_responses.py
tests/integration/clients/: test_async_client.py  test_responses.py  test_sync_client.py
tests/toolkit/: image_test.py  image_tests.py  models_tests.py
tests/unit/clients/: test_responses.py
tests/unit/engines/: conftest.py  test_api_engine.py
tests/unit/toolkit/: test_image.py  test_models.py
(+51 files in other folders)
