[project]
name = "bria_client"
version = "0.0.2"
description = "Bria.ai Python SDK"
readme = "README.md"
authors = [{ name = "Bria.ai" }]
maintainers = [
    { name = "omri", email = "omriassa@bria.ai" },
    { name = "noam", email = "noam@bria.ai" }
]

requires-python = ">=3.10"
dependencies = [
    "httpx~=0.28",
    "httpx-retries~=0.4.5",
    "numpy>=2.2.6",
    "pillow",
    "pydantic",
    "pydantic-settings",
    "strenum~=0.4.15; python_version < '3.11'",
    "werkzeug>=3",
]

[project.optional-dependencies]
test = [
    "pytest-asyncio>=1.3.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/bria_client"]

[tool.hatch.build]
include = ["src/**/*"]
exclude = [
    "src/**/*_tests.py",
    "src/bria_client/internal/**/*"
]


[tool.ruff.lint]
select = ["C4", "E", "F", "I", "PERF", "UP"]
ignore = ["PERF203", "E402", "F821"]

[tool.ruff]
line-length = 160
target-version = "py310"

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "pytest-mock>=3.14.1",
    "ruff>=0.12.0",
    "pre-commit>=4.3.0",
]

[tool.pytest.ini_options]
log_cli = true
python_files = "**/*_tests.py"
