[project]
name = "bria_client"
dynamic = ["version"]
description = "Bria.ai Python SDK"
readme = "README.md"
authors = [{ name = "Bria.ai" }]
maintainers = [
    { name = "omri", email = "omriassa@bria.ai" },
    { name = "noam", email = "noam@bria.ai" }
]
license = { text = "MIT" }
keywords = ["bria", "api-client", "image-generation", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Multimedia :: Graphics",
]

requires-python = ">=3.10"
dependencies = [
    "httpx~=0.28",
    "httpx-retries~=0.4.5",
    "numpy>=2.2.6",
    "pillow>=12.0.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pytest>=9.0.2",
    "requests>=2.32.5",
    "strenum~=0.4.15; python_version < '3.11'",
    "werkzeug>=3",
]

[project.urls]
Homepage = "https://bria.ai"
Documentation = "https://docs.bria.ai"
Repository = "https://github.com/Bria-AI/bria-client"
Issues = "https://github.com/Bria-AI/bria-client/issues"

[tool.uv-dynamic-versioning]
fallback-version = "0.0.0"

[tool.uv]
index-url = "https://pypi.org/simple"
cache-keys = [{ file = "pyproject.toml" }, { git = { commit = true, tags = true } }]

[[tool.uv.index]]
name = "codeartifact"
url = "https://bria-300465780738.d.codeartifact.us-east-1.amazonaws.com/pypi/bria_client/simple/"
publish-url = "https://bria-300465780738.d.codeartifact.us-east-1.amazonaws.com/pypi/bria_client/"

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/bria_client"]

[tool.hatch.build]
include = ["src/**/*"]

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.ruff]
line-length = 160
target-version = "py310"

[tool.ruff.lint]
select = ["C4", "E", "F", "I", "PERF", "UP"]
ignore = ["PERF203", "E402", "F821"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pyright>=1.1.407",
    "ruff>=0.14.0",
]
test = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
]

[tool.pytest.ini_options]
markers = [
    "unit: fast unit tests",
    "integration: tests requiring external resources",
    "component: system component end-to-end tests"
]
testpaths = ["tests"]
log_cli = true
python_files = ["test_*.py","*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.pyright]
enableExperimentalFeatures = true

